# j3Text

./: README.md
src/: .gitignore  AGENTS.md  Cargo.toml  THIRD_PARTY_NOTICES.txt  about.txt  build.rs  build_release.py
src/docs/: domain.md  linux-menu-parity-report.md  menu-smoke-report-2026-06-18.md  rich-edit-plain-text-regression-checklist.md
src/scripts/: linux_menu_smoke.sh  windows_menu_smoke.ps1
src/src/: app.rs  domain.rs  error.rs  infra.rs  lib.rs  main.rs  notices.rs
src/src/platform/: encoding.rs  fs.rs  linux.rs  mod.rs  win32.rs
src/tests/: file_io_integration.rs  large_file_regression.rs  plain_text_editor_regression.rs
src/third_party_licenses/rust-standard-library-1.95.0/: COPYRIGHT-library.html
