[package]
name = "j3text"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
toml = "1.1.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Controls",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.11.3", features = ["v4_18"] }

[target.'cfg(not(windows))'.dependencies]
encoding_rs = "0.8.35"

[build-dependencies]
winresource = { version = "0.1.31", default-features = false }
